# passwd_manager

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.sqlx/: query-24ab6af098211128589de67400737a2e53f0195754cfdbbae242574c64e2028c.json  query-2c3066bba6727ec14e489a68482c18e77001933a88774205498f85efdcedc831.json  query-838b9bfa3bad2e80d9b23ef982c632c7b1699d1f6dbd797858ac109428302727.json  query-a0f0f586208983a08cbb97eca5e8df4f61c14c6f0a11f53369533891fc83215d.json  query-d03ced71e21c1769a337c5cf76e1ebc0aa004c4e41c0b5887c615c62b0f0ea1b.json  query-f5d531d61c9ddaa8d4714f0d4b09466eb84ffa6adf52ca9ee69bc4f671eff82e.json  query-fd86fbfa34edd945f7c8059792ff188d8fa9c432be2503b43cc525d5225b62e7.json
api/: Cargo.toml
api/src/: common.rs  config.rs  db.rs  lib.rs  router.rs
api/src/auth/: argon.rs  jwt.rs  middleware.rs  mod.rs
api/src/users/: handlers.rs  models.rs  routes.rs  schemas.rs  services.rs
api/src/vault/: handlers.rs  mod.rs  models.rs  routes.rs  schemas.rs  services.rs
app/: Cargo.toml
app/src/: main.rs
migrations/: 20251002163556_init.down.sql  20251002163556_init.up.sql
