[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
axum = "0.8.4"
axum-macros = "0.5.0"
bcrypt = "0.17.1"
chrono = { version = "0.4.41", features = ["serde"]}
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "postgres", "tls-native-tls", "macros", "chrono"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "validate-request"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features=["env-filter"] }
uuid = { version = "1.18.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
